# auto-value-predict-ml

./: .dockerignore  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
notebooks/: 01_data_overview.ipynb  02_target_analysis.ipynb  03_feature_analysis.ipynb  04_correlations.ipynb  05_data_quality.ipynb
scripts/: convert_md_to_pdf.py  preprocess_data.py  run_pipeline.py  train_advanced_models.py  train_baseline_models.py
src/api/: __init__.py  errors.py  main.py  predictor.py  schemas.py
src/data/: __init__.py  cleaner.py  enrich_fipe_data.py  loader.py  splitter.py  validator.py
src/features/: __init__.py  engineering.py  pipeline.py  selectors.py
src/models/: __init__.py  baseline.py  evaluator.py  persistence.py  trainer.py
src/pipeline/: README.md  __init__.py  base.py  pipeline.py  steps.py
tests/: __init__.py  test_api.py  test_cleaner.py  test_splitter.py  test_validator.py
